--- a/about.css
+++ b/about.css
@@ -24,8 +24,8 @@ a {
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 4rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
   padding: 4rem;
   margin: 0 auto;
   width: max-content;
